--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -2,7 +2,7 @@
     margin-left: 200px;
     display: flex;
     flex-direction: column;
-    height: 100dvi;
+    /*height: 100dvi;*/
 }
 
 .projectWrapper{
