--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,30 @@
-.App {
-  
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    animation-timeline: scroll(x);
-
+.App {  
+    
 
 }
+
+.arrowdown {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  
+  .arrowdown svg {
+    width: 40px; /* Adjust as needed */
+    height: 40px; /* Adjust as needed */
+    animation: float 3s ease-in-out infinite;
+  }
+  
+  @keyframes float {
+    0%, 100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-10px); /* Adjust as needed */
+    }
+  }
+  
+
 
 
 .brownTitle{
