--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -37,11 +37,10 @@ flex: 6;
         display: flex;
         flex-direction: column;
         gap: 30px;
-        margin-left: 20px;
+        margin: 0 20px;
         justify-content: center;
         align-items: center;
         height: 100vh
-    
     }
     
     
