--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -21,7 +21,10 @@
 }
 
 .contactLeft p{
-  font-size: 18px;
+  font-size: 20px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+    font-style: normal;
 }
 
 .contactLeft svg:hover{
