--- a/src/Components/Stack/Stack.css
+++ b/src/Components/Stack/Stack.css
@@ -37,14 +37,15 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin: 0px;
+    margin: 0 20px;
+    
 }
 
 .stack-elements img,
 .stack-elements svg {
-    width: 40px;
-    height: 40px;
-    margin: 10px;
+    width: 45px;
+    height: 45px;
+    margin: 15px;
 }
 
 
