--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
 
 .brownTitle{
     font-size: 30px;
-    font-family: fantasy;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: calc( 1em + 2vmin );
     font-weight: 500;
     color: brown;
