--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -67,28 +67,33 @@ li a {
 .Bar {
   width: 25px;
   height: 3px;
-  background-color: #333;
-  margin: 4px 0;
-  transition: 0.4s;
+  /*background-color: #333;*/
+  margin: 0 6px;
+  transition: 0.5s;
+ 
 }
 
 .open {
-  transform: rotate(0deg);
+  
 }
 
-.Hamburger .Bar:nth-child(2) {
-  opacity: 0;
+.Hamburger .Bar {
+
 }
 
-.Hamburger .Bar:nth-child(3) {
-  transform: rotate(-45deg);
+.Hamburger .Bar {
 }
 
 @media (max-width: 600px) {
+
+  .HeaderLeft span {
+    margin: 10px 0px;
+  }
+  
   .HeaderRight {
-    
     display: none;
     width: 100%;
+    height: 100vh;
     position: absolute;
     top: 60px;
     left: 0;
@@ -96,6 +101,7 @@ li a {
     text-align: center;
     z-index: 1;
     transition: max-height 0.3s ease-in-out;
+
   }
 
   .HeaderRight.open {
@@ -114,7 +120,4 @@ li a {
     display: flex;
   }
 
-  .header{
-    margin: 0 50px;
-  }
 }
