--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -15,7 +15,8 @@
   justify-content: center;
   column-gap: 1rem;
   font-size: 30px;
-  font-family: fantasy;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  ;
 }
 
 .HeaderLeft a {
@@ -68,7 +69,7 @@ li a {
   width: 25px;
   height: 3px;
   /*background-color: #333;*/
-  margin: 0 6px;
+  margin-right: 10px;
   transition: 0.5s;
  
 }
@@ -86,8 +87,9 @@ li a {
 
 @media (max-width: 600px) {
 
-  .HeaderLeft span {
-    margin: 10px 0px;
+  .HeaderLeft span{
+    margin-top: 10px;
+    margin-left: 10px;
   }
   
   .HeaderRight {
