--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -70,7 +70,9 @@ li a {
   height: 3px;
   /*background-color: #333;*/
   margin-right: 10px;
+  margin-top: 0px;
   transition: 0.5s;
+  
  
 }
 
@@ -90,6 +92,7 @@ li a {
   .HeaderLeft span{
     margin-top: 10px;
     margin-left: 10px;
+    font-size: 40px;
   }
   
   .HeaderRight {
@@ -103,15 +106,20 @@ li a {
     text-align: center;
     z-index: 1;
     transition: max-height 0.3s ease-in-out;
-
+    justify-content: center;
   }
 
   .HeaderRight.open {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
   }
 
   .HeaderRight ul {
     flex-direction: column;
+    align-items: center;
+    font-size: 1.5rem;
   }
 
   .HeaderRight li {
@@ -120,6 +128,8 @@ li a {
 
   .Hamburger {
     display: flex;
+    align-items: flex-start;
+    justify-content: flex-start
   }
 
 }
